fixed SonarLint warnings